--- a/docs/tp_examples/master07-cancer_prescribing.adoc
+++ b/docs/tp_examples/master07-cancer_prescribing.adoc
@@ -33,7 +33,7 @@ input
         ranges =
             -------------------
             [high]:   |>= 14%|,
-            [normal]: |< 14%|
+            [normal]: |< 14%|;
             -------------------
 
     ejection_fraction: Quantity
@@ -41,7 +41,7 @@ input
         ranges =
             --------------------
             [normal]:  |>= 40%|,
-            [low]  :   |< 40%|
+            [low]  :   |< 40%|;
             --------------------
                 
     has_heart_failure_class_II: Boolean
@@ -90,64 +90,66 @@ rules -- Conditions
 rules -- Guideline
 
     molecular_subtype: Terminology_term
-        Result := [[
-            =========================================================
-            er_positive and 
-            her2_negative and 
-            not ki67.in_range ([high]):    [luminal_A],
-            ---------------------------------------------------------
-            er_positive and 
-            her2_negative and 
-            ki67.in_range ([high]):        [luminal_B_HER2_negative],
-            ---------------------------------------------------------
-            er_positive and 
-            her2_positive:                 [luminal_B_HER2_positive],
-            ---------------------------------------------------------
-            er_negative and 
-            pr_negative and 
-            her2_positive and 
-            ki67.in_range ([high]):        [HER2],
-            ---------------------------------------------------------
-            er_negative and
-            pr_negative and 
-            her2_negative and 
-            ki67.in_range ([high]):        [triple_negative],
-            ---------------------------------------------------------
-            *:                             [none]
-            =========================================================
-        ]]
+        Result := 
+            choice of {
+                =========================================================
+                er_positive and 
+                her2_negative and 
+                not ki67.in_range ([high]):    [luminal_A],
+                ---------------------------------------------------------
+                er_positive and 
+                her2_negative and 
+                ki67.in_range ([high]):        [luminal_B_HER2_negative],
+                ---------------------------------------------------------
+                er_positive and 
+                her2_positive:                 [luminal_B_HER2_positive],
+                ---------------------------------------------------------
+                er_negative and 
+                pr_negative and 
+                her2_positive and 
+                ki67.in_range ([high]):        [HER2],
+                ---------------------------------------------------------
+                er_negative and
+                pr_negative and 
+                her2_negative and 
+                ki67.in_range ([high]):        [triple_negative],
+                ---------------------------------------------------------
+                *:                             [none];
+                =========================================================
+            }
     
     chemotherapy_regime: Terminology_term
-        Result := [[
-            ================================================================================
-            not metastatic: [[
-                    ========================================================================
-                    molecular_subtype in 
-                        {[luminal_B_HER2_negative], 
-                         [triple_negative]} and
-                    (tnm_t > '1a' or tnm_n > '0'):                   [taxanes],
-                    ------------------------------------------------------------------------
-                    molecular_subtype = [luminal_A] and 
-                    (tnm_t >= '3' or tnm_n >= '2' or tnm_g >= '3'):  [anthracyclines],
-                    ------------------------------------------------------------------------
-                    molecular_subtype = [luminal_B_HER2_positive] and 
-                    (tnm_t = '1b' or tnm_t = '1c' and tnm_n = '0') or
-                    molecular_subtype = [HER2_positive] and 
-                    (tnm_t = '1b' and tnm_n = '0'):                  [paditaxel_trastuzumab]
-                    ========================================================================
-            ]]
-            --------------------------------------------------------------------------------
-            *: [[
-                    =====================
-                    yyy:        aaa,
-                    ---------------------
-                    xxx:        bbb,
-                    ---------------------
-                    *:
-                    =====================
-            ]]
-            ================================================================================
-        ]]
+        Result := 
+            choice of {
+                ============================================================================================
+                not metastatic: choice of {
+                                    ========================================================================
+                                    molecular_subtype in 
+                                        {[luminal_B_HER2_negative], 
+                                         [triple_negative]} and
+                                    (tnm_t > '1a' or tnm_n > '0'):                   [taxanes],
+                                    ------------------------------------------------------------------------
+                                    molecular_subtype = [luminal_A] and 
+                                    (tnm_t >= '3' or tnm_n >= '2' or tnm_g >= '3'):  [anthracyclines],
+                                    ------------------------------------------------------------------------
+                                    molecular_subtype = [luminal_B_HER2_positive] and 
+                                    (tnm_t = '1b' or tnm_t = '1c' and tnm_n = '0') or
+                                    molecular_subtype = [HER2_positive] and 
+                                    (tnm_t = '1b' and tnm_n = '0'):                  [paditaxel_trastuzumab]
+                                    ========================================================================
+                                },
+                --------------------------------------------------------------------------------------------
+                *:              choice of {
+                                    =====================
+                                    yyy:        aaa,
+                                    ---------------------
+                                    xxx:        bbb,
+                                    ---------------------
+                                    *:          ccc
+                                    =====================
+                                }
+                =============================================================================================
+            }
             
 terminology
     term_definitions = <
