--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -6,10 +6,15 @@
 
 4+^h|*PROC Release 1.6.0 (unreleased)*
 
-|[[latest_issue]]0.6.1
+|[[latest_issue]]0.6.2
+|Add parallel synchronisation example.
+|T Beale
+|[[latest_issue_date]]30 Oct 2020
+
+|0.6.1
 |Add concurrent end blocks and T/F Gates.
 |T Beale
-|[[latest_issue_date]]03 Jun 2020
+|03 Jun 2020
 
 4+^h|*PROC Release 1.0.0*
 
