--- a/docs/tp_vml/master04-patterns.adoc
+++ b/docs/tp_vml/master04-patterns.adoc
@@ -1,2 +1,9 @@
 = Patterns
 
+== Syncrhonisation of Parallel Paths
+
+The following example shows two parallel activity paths, where the completion of one (lab results arriving) causes the termination of the other (medication).
+
+[.text-center]
+.Parallel synchronisation
+image::{diagrams_uri}/EX-parallel_sync.svg[id=parallel_sync, align="center"]
