--- a/docs/tp_vml/master04-patterns.adoc
+++ b/docs/tp_vml/master04-patterns.adoc
@@ -1,6 +1,6 @@
 = Patterns
 
-== Syncrhonisation of Parallel Paths
+== Synchronisation of Parallel Paths
 
 The following example shows two parallel activity paths, where the completion of one (lab results arriving) causes the termination of the other (medication).
 
